# stealthpte

./: .dockerignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  client.yml  server.yml
client/: Cargo.toml
client/src/: client.rs  config.rs  install.rs  main.rs  protocol.rs  service.rs  tunnel.rs  wsconn.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/superpowers/specs/: 2026-05-15-stealthpte-design.md
server/: go.mod  go.sum
server/cmd/server/: main.go
server/internal/api/: handler.go  handler_test.go
server/internal/auth/: jwt.go
server/internal/config/: config.go
server/internal/db/: db.go
server/internal/tunnel/: manager.go  tcp.go  udp.go
server/internal/ws/: hub.go  protocol.go  session.go  wsconn.go
server/web/static/: client.html  index.html  login.html
